# xc

./: .gitignore  Cargo.toml  LICENSE  README.md  ruff.toml
.github/workflows/: ci.yml
examples/: captures_stdout.py  decimal_import.py  expected_error.py  failing_test.py  import_decimal.py  invalid_method.py  long_running.py  pytest_attributes.py  simple_function.py  simple_method.py  skip_test.py  test_times.py  times.py
examples/package/: test_times.py
src/: config.rs  coverage.rs  discovery.rs  json.rs  main.rs  monitoring.py  print.rs  python.rs  run.rs  tests.rs
src/output/: json.rs  mod.rs  standard.rs
src/python/: interpreters.rs  mod.rs  objects.rs  operations.rs
tests/: discovery.rs  execution.rs  output.rs  requirements.txt
tests/discovery/: invalid_syntax.py
tests/execution/: basic_function.py  basic_method.py  captures_stdout.py  dependencies.py  expected_error.py  failing_test.py  import_decimal.py  imports.py  invalid_code.py  invalid_method.py  invalid_module.py  invalid_remove.py  isolated.py  long_running.py  pytest_marks.py  setup_teardown.py  skip_tests.py  times.py
tests/execution/package/: import_submodule.py
tests/output/: failed_test.py  failed_test_stdout.py  passing_test.py  skipped_test.py
