[package]
name = "xc"
version = "0.1.0"
authors = ["Ben Brown <9870007+brownben@users.noreply.github.com>>"]
edition = "2021"
description = "A parallel test runner for Python using subinterpreters."
repository = "https://github.com/brownben/xc"
license = "Apache-2.0"

[dependencies]
anstream = "0.6.15"
clap = { version = "4.5.17",  features = ["derive"] }
ignore = "0.4.23"
owo-colors = "4.0.0"
pyo3-ffi = "0.22.2"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", "rev" = "e1603e3" }
widestring = "1.1.0"
